# chocboy

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md
.github/workflows/: check.yaml
cmake/: ClangTidy.cmake  CompilerFlags.cmake  CppCheck.cmake  Doxygen.cmake  InSourceCheck.cmake  Iwyu.cmake
data/: CMakeLists.txt  doxyfile.in
src/: CMakeLists.txt
src/chocboy/: CMakeLists.txt  main.cpp
src/cocoa/: CMakeLists.txt  utilities.hpp  utility.hpp  utility.tpp  utility_test.cpp
src/cocoa/gb/: cpu.cpp  cpu.hpp  interrupt.hpp  interrupt.tpp  memory.cpp  memory.hpp  sm83.cpp  sm83.hpp  sm83.tpp  sm83_test.cpp
tests/: CMakeLists.txt  unit_example.cpp  unit_utilities.cpp
