# SPDX-FileCopyrightText: 2025 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: MIT

# add_executable(integration)
# target_sources(integration PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/TODO.cpp")
# target_link_libraries(integration
#   PRIVATE cocoa::cocoa
#           chocboy::dependencies
#           chocboy::cppstd_flags
#           chocboy::warning_flags
#           Catch2::Catch2WithMain)
# catch_discover_tests(integration)
